# cursive-flexi-logger-view

./: .gitignore  Cargo.toml  README.md  cargo-test.json
.github/workflows/: test_and_push.yml
assets/: demo.yml
examples/: no_indent.rs  simple.rs
src/: lib.rs
