[package]
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
description = "An alternative debug view for gyscos/cursive using emabee/flexi_logger"
documentation = "https://docs.rs/cursive-flexi-logger-view"
edition = "2018"
keywords = ["cursive-views", "cursive", "logging", "debug", "terminal"]
license = "BSD-3-Clause"
name = "cursive-flexi-logger-view"
readme = "README.md"
repository = "https://github.com/deinstapel/cursive-flexi-logger-view"
version = "0.3.1-alpha.0"

[dependencies]
cursive_core = "^0.2"
arraydeque = "0.4.5"
flexi_logger = "0.15.1"
lazy_static = "1.4.0"
log = "0.4.8"
unicode-width = "0.1.7"

[dev-dependencies]
cursive = "0.16.0"

[badges]
travis-ci = { repository = "deinstapel/cursive-flexi-logger-view" }
